--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "export PORT=3005 && react-scripts start",
+    "start-https": "PORT=3005 HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
