--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "PORT=3005 react-scripts start",
     "start-https": "PORT=3005 HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-dev": "REACT_APP_PUBLIC_EXCHANGE_HOST=http://localhost:4005 npm start"
   },
   "eslintConfig": {
     "extends": [
